log
Thu 28 Sep 2023 01:56:04 PM UTC: 
 tests:  0|4
total_score: 0/70
24bb2c2
Thu 28 Sep 2023 02:12:12 PM UTC: 
 heap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|0
   [ INFO ] Heap* h = createHeap()
81f7ccc
Thu 28 Sep 2023 02:12:49 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
73047f7
Thu 28 Sep 2023 02:12:58 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
e31d5f0
Thu 28 Sep 2023 02:14:26 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|2
total_score: 20/70
99a9f90
Thu 28 Sep 2023 02:33:52 PM UTC: 
 heap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  2|2
total_score: 20/70
d53f8c9
Thu 28 Sep 2023 02:39:41 PM UTC: 
 heap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:47:35: error: self-comparison always evaluates to false [-Werror=tautological-compare]
   47 |     if (pq->heapArray[index].data < pq->heapArray[index].data) {
      |                                   ^
heap.c:49:43: error: array subscript is not an integer
   49 |       pq->heapArray[index] = pq->heapArray[data];
      |                                           ^
heap.c:50:20: error: array subscript is not an integer
   50 |       pq->heapArray[data] = temp;
      |                    ^
heap.c:51:13: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   51 |       index = data;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
07946c6
Thu 28 Sep 2023 02:40:05 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:47:39: error: self-comparison always evaluates to false [-Werror=tautological-compare]
   47 |     if (pq->heapArray[index].priority < pq->heapArray[index].priority) {
      |                                       ^
heap.c:49:43: error: array subscript is not an integer
   49 |       pq->heapArray[index] = pq->heapArray[data];
      |                                           ^
heap.c:50:20: error: array subscript is not an integer
   50 |       pq->heapArray[data] = temp;
      |                    ^
heap.c:51:13: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   51 |       index = data;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
96489a3
Thu 28 Sep 2023 02:40:43 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:48:39: error: self-comparison always evaluates to false [-Werror=tautological-compare]
   48 |     if (pq->heapArray[index].priority < pq->heapArray[index].priority) {
      |                                       ^
heap.c:50:43: error: array subscript is not an integer
   50 |       pq->heapArray[index] = pq->heapArray[data];
      |                                           ^
heap.c:51:20: error: array subscript is not an integer
   51 |       pq->heapArray[data] = temp;
      |                    ^
heap.c:52:13: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   52 |       index = data;
      |             ^
heap.c:47:9: error: unused variable ‘parentIndex’ [-Werror=unused-variable]
   47 |     int parentIndex = (index - 1) / 2;
      |         ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5e64567
Thu 28 Sep 2023 02:41:08 PM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:48:39: error: self-comparison always evaluates to false [-Werror=tautological-compare]
   48 |     if (pq->heapArray[index].priority < pq->heapArray[index].priority) {
      |                                       ^
cc1: all warnings being treated as errors
Compilation failed
59d6313
Thu 28 Sep 2023 02:41:31 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:48:39: error: self-comparison always evaluates to false [-Werror=tautological-compare]
   48 |     if (pq->heapArray[index].priority > pq->heapArray[index].priority) {
      |                                       ^
cc1: all warnings being treated as errors
Compilation failed
acea6a4
Thu 28 Sep 2023 02:41:49 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:48:39: error: self-comparison always evaluates to false [-Werror=tautological-compare]
   48 |     if (pq->heapArray[index].priority < pq->heapArray[index].priority) {
      |                                       ^
cc1: all warnings being treated as errors
Compilation failed
65ebd36
Thu 28 Sep 2023 02:42:16 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:49:39: error: self-comparison always evaluates to false [-Werror=tautological-compare]
   49 |     if (pq->heapArray[index].priority < pq->heapArray[index].priority) {
      |                                       ^
cc1: all warnings being treated as errors
Compilation failed
d86a743
Thu 28 Sep 2023 02:50:57 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
d13fba3
Thu 28 Sep 2023 03:23:03 PM UTC: 
 heap.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:70:23: error: invalid operands to binary * (have ‘int’ and ‘char * (*)(const char *, int)’)
   70 |     int leftChild = 2 * index + 1;
      |                       ^
      |                       |
      |                       char * (*)(const char *, int)
heap.c:71:24: error: invalid operands to binary * (have ‘int’ and ‘char * (*)(const char *, int)’)
   71 |     int rightChild = 2 * index + 2;
      |                        ^
      |                        |
      |                        char * (*)(const char *, int)
heap.c:72:20: error: initialization of ‘int’ from ‘char * (*)(const char *, int)’ makes integer from pointer without a cast [-Werror=int-conversion]
   72 |     int smallest = index;
      |                    ^~~~~
heap.c:81:18: error: comparison between pointer and integer [-Werror]
   81 |     if (smallest == index) {
      |                  ^~
heap.c:82:36: error: array subscript is not an integer
   82 |       heapElem temp = pq->heapArray[index];
      |                                    ^
heap.c:83:20: error: array subscript is not an integer
   83 |       pq->heapArray[index] = pq->heapArray[smallest];
      |                    ^
heap.c:85:13: error: lvalue required as left operand of assignment
   85 |       index = smallest;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
b077bc9
Thu 28 Sep 2023 03:24:04 PM UTC: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
76f85c9
